fix: change letter spacing on subtitle

--- a/shelter/assets/pets/style.css
+++ b/shelter/assets/pets/style.css
@@ -78,7 +78,7 @@ header {
     padding-left: 4px;
     font: 400 13px 'Arial', sans-serif;
     color: #292929;
-    letter-spacing: 0.11em;
+    letter-spacing: 0.1em;
 }
 
 .shelter_list {
